Move the Janionrentals@gmail.com email address to the top right of the screen like the design. Fix Features top margin. Fix the features bullet point list. make sure they left align.

--- a/css/screen.css
+++ b/css/screen.css
@@ -21,12 +21,12 @@ header {
   height: 100vh;
   padding: 30px;
 }
-
+/* 
 main {
   display: grid;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-columns: 1fr;
-}
+} */
 
 .hero {
   display: flex;
@@ -50,6 +50,7 @@ h2 {
 
 h3 {
   font-size: 32px;
+  padding: 50px 0;
 }
 
 a {
@@ -59,7 +60,7 @@ a {
 
 button {
   all: unset;
-  padding: 33px 55px;
+  padding: 40px 90px;
   text-decoration: none;
   font-family: sans-serif;
   font-size: 24px;
@@ -82,7 +83,6 @@ button {
   display: flex;
   flex-direction: column;
   padding: 15px 0;
-  grid-column: 1 / 1;
 }
 
 .gallery {
@@ -176,7 +176,7 @@ h4 {
 /* Testimonials */
 
 .review {
-  padding: 10px 0;
+  padding: 20px 0;
 }
 
 .avatar {
@@ -224,10 +224,20 @@ footer {
 /* Media Queries */
 
 @media (min-width: 1000px) {
+  body {
+    font-size: 24px;
+  }
+
   header {
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
+    padding: 50px;
+  }
+
+  nav {
+    flex-direction: row;
+    justify-content: space-between;
   }
 
   main {
@@ -235,6 +245,10 @@ footer {
     padding: 100px 10%;
     grid-template-columns: 2fr 1fr;
     grid-template-rows: 1fr 1fr;
+  }
+
+  button {
+    padding: 57px 130px;
   }
 
   /* Gallery */
@@ -251,6 +265,7 @@ footer {
     grid-gap: 50px;
     padding-bottom: 15px;
     padding-right: 50px;
+    width: 70%;
   }
 
   #img-1 {
@@ -282,23 +297,26 @@ footer {
   }
 
   .map {
-    grid-row: 1 / 3;
-    grid-column: 2/3;
+    width: 30%;
   }
 
   .map-img {
     max-width: 100%;
   }
 
+  .reviews {
+    padding-bottom: 50px;
+  }
+
   .testimonials-features {
-    grid-row: 2 / 2;
+    width: 70%;
   }
 
   /* Features */
   .feature-list {
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
   }
 
   /* Footer */
